feat: enhance layered architecture by move DTOs out of services